// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput must match the snapshot with default Props 1`] = `
.c0 {
  width: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgb(232,24,68);
  font-size: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:767px) {
  .c0 {
    font-size: 18px;
  }
}

<MiddleFakeInputStyle>
  <label
    aria-label="qux"
    className="c0"
    htmlFor="bar"
  >
    <svg
      icon="lock"
      lib="@fortawesome/react-fontawesome"
      prefix="fas"
    />
  </label>
  <BasicInputStyle
    aria-required={true}
    id="bar"
    name="bar"
    onChange={[Function]}
    placeholder="qux"
    required={true}
    tabIndex={0}
    type="password"
    value="baz"
  />
  <PasswordButton
    isPasswordDisplayed={false}
    tabIndex={0}
    toggleIsPasswordDisplayed={[Function]}
  />
</MiddleFakeInputStyle>
`;

exports[`PasswordInput must return the diff between snapshot when password is displayed vs hidden 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`PasswordInput must return the diff between snapshot when password is required or optionnal 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -9,16 +9,16 @@
        lib="@fortawesome/react-fontawesome"
        prefix="fas"
      />
    </label>
    <BasicInputStyle
-     aria-required={true}
+     aria-required={false}
      id="bar"
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
-     required={true}
+     required={false}
      tabIndex={0}
      type="password"
      value="baz"
    />
    <PasswordButton
`;

exports[`PasswordInput must return the diff between snapshot with a negative vs a postive Tab Index 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -15,15 +15,15 @@
      id="bar"
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
      required={true}
-     tabIndex="-1"
+     tabIndex="0"
      type="password"
      value="baz"
    />
    <PasswordButton
      isPasswordDisplayed={false}
-     tabIndex="-1"
+     tabIndex="0"
      toggleIsPasswordDisplayed={[Function anonymous]}
    />
  </MiddleFakeInputStyle>
`;
